2021-07-25 [1.42 Bld 206]

- Bugfix      : NS32K: allow immediate destination operand for CMPQi
- Bugfix      : correct address output for Intel32 Hex format

2021-07-03 [1.42 Bld 205]

- Bugfix      : correct encoding and allowed addressing modes of XCH(B) on MCS-96
- Change      : huge internal rework to allow strings longer than 255 characters
                at some (but far off from all...) places

2021-05-08 [1.42 Bld 204]

- Bugfix      : fix SC/MP target

2021-05-07 [1.42 Bld 203]

- Addition    : Allow changing the program counter by assigning value to PC
                symbol
- Addition    : Allow BIGENDIAN for SC/MP
- Bugfix      : Several bugfixes if host system is big-endian

2021-04-25 [1.42 Bld 202]

- Change      : Somewhat less unintuitive error message if source file cannot
                be opened
- Bugfix      : Better handling of DUP operator in DB, DW, DD... if there is
                also a symbol of this name
- Addition    : Add file name to all error messages when file open fails

2021-04-17 [1.42 Bld 201]

- Bugfix      : fix MSP430X MOVA instruction with 0(Rn) or @Rn as destination
- Change      : Logic to update label's value in case of implicit padding gets
                reset by less pseudo instructions

2021-03-28 [1.42 Bld 200]

- Addition    : Add NS32K custom processor instructions
- Addition    : Add NS32K floating point register names Lx
- Bugfix      : repair -D <var>=<value> option

2021-03-19 [1.42 Bld 199]

- Bugfix      : Correct address of NS32082 BPR1 register 
- Bugfix      : Correct operand size handling of NS32xxx MOVLF/MOVFL
- Bugfix      : Correct operand size of NS32xxx shift/rotate instructions
- Addition    : Allow addr(pc) as syntax for NS32xxx PC-relative addressing
- Addition    : Allow disp2(disp1(ext)) as syntax variant for NS32xxx
                external mode

2021-03-17 [1.42 Bld 198]

- Bugfix      : Some cleanups regarding Z180 I/O instructions